add renderer rectangle methods
- Add Renderer.rectIO
- Add Renderer.rectOutlineIO
- Add Renderer.roundedRectIO
- Add Renderer.roundedRectOutlineIO

--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
     <body>
+        <h2>Clear Demo</h2>
         <canvas id="clear-demo"></canvas>
+        <h2>Rect Demo</h2>
+        <canvas id="rect-demo"></canvas>
+        <h2>Rect Outline Demo</h2>
+        <canvas id="rect-outline-demo"></canvas>
+        <h2>Rounded Rect Demo</h2>
+        <canvas id="rounded-rect-demo"></canvas>
+        <h2>Rounded Rect Outline Demo</h2>
+        <canvas id="rounded-rect-outline-demo"></canvas>
         <script src="target/scala-3.2.0/canvas-ui-fastopt/main.js"></script>
     </body>
 </html>
