add renderer text methods
- Add Font enum.
- Add Renderer.measureTextIO
- Add Renderer.textIO

--- a/demo.html
+++ b/demo.html
@@ -11,6 +11,8 @@
         <canvas id="rounded-rect-demo"></canvas>
         <h2>Rounded Rect Outline Demo</h2>
         <canvas id="rounded-rect-outline-demo"></canvas>
+        <h2>Monospace Text Demo</h2>
+        <canvas id="monospace-text-demo"></canvas>
         <script src="target/scala-3.2.0/canvas-ui-fastopt/main.js"></script>
     </body>
 </html>
