add renderer sprite methods
- Add Sprite record.
- Add Renderer.spriteIO
- Add Renderer.spriteFrameIO

--- a/demo.html
+++ b/demo.html
@@ -13,6 +13,10 @@
         <canvas id="rounded-rect-outline-demo"></canvas>
         <h2>Monospace Text Demo</h2>
         <canvas id="monospace-text-demo"></canvas>
+        <h2>Sprite Demo</h2>
+        <canvas id="sprite-demo"></canvas>
+        <h2>Sprite Frame Demo</h2>
+        <canvas id="sprite-frame-demo"></canvas>
         <script src="target/scala-3.2.0/canvas-ui-fastopt/main.js"></script>
     </body>
 </html>
