add text component
- Add Style record.
- Add Component enum.
- Add Comopnent.Text.

--- a/demo.html
+++ b/demo.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h2>Clear Demo</h2>
+        <h2>Renderer Clear Demo</h2>
         <canvas id="clear-demo"></canvas>
-        <h2>Rect Demo</h2>
+        <h2>Renderer Rect Demo</h2>
         <canvas id="rect-demo"></canvas>
-        <h2>Rect Outline Demo</h2>
+        <h2>Renderer Rect Outline Demo</h2>
         <canvas id="rect-outline-demo"></canvas>
-        <h2>Rounded Rect Demo</h2>
+        <h2>Renderer Rounded Rect Demo</h2>
         <canvas id="rounded-rect-demo"></canvas>
-        <h2>Rounded Rect Outline Demo</h2>
+        <h2>Renderer Rounded Rect Outline Demo</h2>
         <canvas id="rounded-rect-outline-demo"></canvas>
-        <h2>Monospace Text Demo</h2>
+        <h2>Renderer Monospace Text Demo</h2>
         <canvas id="monospace-text-demo"></canvas>
-        <h2>Sprite Demo</h2>
+        <h2>Renderer Sprite Demo</h2>
         <canvas id="sprite-demo"></canvas>
-        <h2>Sprite Frame Demo</h2>
+        <h2>Renderer Sprite Frame Demo</h2>
         <canvas id="sprite-frame-demo"></canvas>
+        <h2>Component Text Demo</h2>
+        <canvas id="c-text-demo"></canvas>
         <script src="target/scala-3.2.0/canvas-ui-fastopt/main.js"></script>
     </body>
 </html>
