add container components
- Add Component.StretchBox
- Add Component.FreeBox
- Add Component.Column
- Add Component.Row

--- a/demo.html
+++ b/demo.html
@@ -19,6 +19,14 @@
         <canvas id="sprite-frame-demo"></canvas>
         <h2>Component Text Demo</h2>
         <canvas id="c-text-demo"></canvas>
+        <h2>Component StretchBox Demo</h2>
+        <canvas id="c-stretch-box-demo"></canvas>
+        <h2>Component Column Demo</h2>
+        <canvas id="c-column-demo"></canvas>
+        <h2>Component Row Demo</h2>
+        <canvas id="c-row-demo"></canvas>
+        <h2>Component FreeBox Demo</h2>
+        <canvas id="c-free-box-demo"></canvas>
         <script src="target/scala-3.2.0/canvas-ui-fastopt/main.js"></script>
     </body>
 </html>
