--- a/demo.html
+++ b/demo.html
@@ -27,6 +27,10 @@
         <canvas id="c-row-demo"></canvas>
         <h2>Component FreeBox Demo</h2>
         <canvas id="c-free-box-demo"></canvas>
+        <h2>Component Sprite Demo</h2>
+        <canvas id="c-sprite-demo"></canvas>
+        <h2>Component SpriteFrame Demo</h2>
+        <canvas id="c-sprite-frame-demo"></canvas>
         <script src="target/scala-3.2.0/canvas-ui-fastopt/main.js"></script>
     </body>
 </html>
