add alpha component
- Add Renderer.setAlpha.
- Add Renderer.resetAlpha.
- Add Component.Alpha.

--- a/demo.html
+++ b/demo.html
@@ -31,6 +31,8 @@
         <canvas id="c-sprite-demo"></canvas>
         <h2>Component SpriteFrame Demo</h2>
         <canvas id="c-sprite-frame-demo"></canvas>
+        <h2>Component Alpha Demo</h2>
+        <canvas id="c-alpha-demo"></canvas>
         <script src="target/scala-3.2.0/canvas-ui-fastopt/main.js"></script>
     </body>
 </html>
