implement image tinting

--- a/test.html
+++ b/test.html
@@ -17,9 +17,11 @@
     <h2>Behavior of Component.Image</h2>
     <h3>Should render a whole image.</h3>
     <canvas id="image"></canvas>
+    <h3>Should render a tinted image.</h3>
+    <canvas id="image-tint"></canvas>
     <h3>Should render a slice of an image.</h3>
     <canvas id="image-slice"></canvas>
-
+    
     <h2>Behavior of Component.Rect</h2>
     <h3>Should render a rectangle.</h3>
     <canvas id="rect"></canvas>
@@ -100,7 +102,7 @@
     <h3>Should render a non-empty column.</h3>
     <canvas id="c-col"></canvas>
 
-    <script src="../../../../../target/scala-3.2.0/canvas-ui-test-fastopt/main.js"></script>
+    <script src="target/scala-3.2.0/canvas-ui-test-fastopt/main.js"></script>
 </body>
 
 </html>
